@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: November 23, 2007</p>
+      <p>Last Updated: November 24, 2007</p>
     </td>
   </tr>
 </table>
@@ -728,6 +728,8 @@ Other memory:
 
 	* Removed unused uIP files
 	* sched/, mm/, net/ subystem debug can not be selectively enabled/disabled
+	* Correct socket close logic -- needs to disconnect TCP socket on close
+	* uIP webserver now seems to be fully functional
 </pre></ul>
 
 <table width ="100%">
