@@ -33,7 +33,6 @@ o Network
   but is not implemented.
 - uIP's netutils/telnetd (and maybe others) are seriously broken.
   Need to be re-written to use listen() and accept()
-- uIP's netutils/webserver hangs (I think NuttX is not properly closing the connection)
 - uIP's netutils/smtp, dpcpc, resolv, webclient -- untested
 - Should implement SOCK_RAW
 - Performance Improvements (uIP is not very fast):
